# 6_Tech-Challenge

./: .gitignore  TechChallenge.ipynb  main.py  pyproject.toml
