[project]
name = "6-tech-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "graphviz>=0.21",
    "ipywidgets>=8.1.8",
    "notebook>=7.5.5",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "setuptools>=60,<71",
    "shap>=0.51.0",
    "xgboost>=3.2.0",
    "ydata-profiling>=4.18.1",
]
